Avoid leaking modules on classpath, to avoid duplication of classes across module and class path.